--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/vlan-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/vlan-interfaces.j2
@@ -142,8 +142,8 @@
 | Interface | ISIS Instance | ISIS BFD | ISIS Metric | Mode | Level-1 Authentication Mode | Level-2 Authentication Mode |
 | --------- | ------------- | -------- | ----------- | ---- | --------------------------- | --------------------------- |
 {%         for vlan_interface in vlan_interfaces | arista.avd.natural_sort('name') %}
-{%             set isis_level2_authentication_mode = vlan_interface.isis_authentication.level_2.mode | arista.avd.default(vlan_interface.isis_authentication.both.mode, "-") %}
-{%             set isis_level1_authentication_mode = vlan_interface.isis_authentication.level_1.mode | arista.avd.default(vlan_interface.isis_authentication.both.mode, "-") %}
+{%             set isis_level2_authentication_mode = vlan_interface.isis_authentication.both.mode | arista.avd.default(vlan_interface.isis_authentication.level_2.mode, "-") %}
+{%             set isis_level1_authentication_mode = vlan_interface.isis_authentication.both.mode | arista.avd.default(vlan_interface.isis_authentication.level_1.mode, "-") %}
 {%             if vlan_interface.isis_enable is arista.avd.defined %}
 {%                 set isis_metric = vlan_interface.isis_metric | arista.avd.default('-') %}
 {%                 if vlan_interface.isis_network_point_to_point is arista.avd.defined %}
