--- a/ansible_collections/arista/avd/roles/eos_designs/templates/documentation/fabric-documentation.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/documentation/fabric-documentation.j2
@@ -7,7 +7,7 @@
 {%     set node_types = node_type_keys | map(attribute="type") %}
 {% else %}
 {%     set default_node_types = {
-           "l3ls-evpn": ["spine", "l3leaf", "l2leaf", "super-spine", "overlay-controller", "wan_router", "wan_rr"],
+           "l3ls-evpn": ["spine", "l3leaf", "l2leaf", "l3spine", "l2spine", "super-spine", "overlay-controller", "wan_router", "wan_rr", "p", "pe", "rr"],
            "mpls": ["p", "pe", "rr"],
            "l2ls": ["l3spine", "spine", "leaf"]
        } %}
