--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
@@ -680,6 +680,119 @@ interface {{ port_channel_interface.name }}
 {%     if port_channel_interface.isis_authentication_key is arista.avd.defined %}
    isis authentication key 7 {{ port_channel_interface.isis_authentication_key | arista.avd.hide_passwords(hide_passwords) }}
 {%     endif %}
+{%     if port_channel_interface.isis_authentication.both.mode is arista.avd.defined
+          and (port_channel_interface.isis_authentication.both.mode in ["md5", "text"]
+               or (port_channel_interface.isis_authentication.both.mode == "sha" and port_channel_interface.isis_authentication.both.sha.key_id is arista.avd.defined)
+               or (port_channel_interface.isis_authentication.both.mode == "shared-secret"
+                   and port_channel_interface.isis_authentication.both.shared_secret.profile is arista.avd.defined
+                   and port_channel_interface.isis_authentication.both.shared_secret.algorithm is arista.avd.defined)) %}
+{%         set isis_auth_cli = "isis authentication mode " ~ port_channel_interface.isis_authentication.both.mode %}
+{%         if port_channel_interface.isis_authentication.both.mode == "sha" %}
+{%             set isis_auth_cli = isis_auth_cli ~ " key-id " ~ port_channel_interface.isis_authentication.both.sha.key_id %}
+{%         elif port_channel_interface.isis_authentication.both.mode == "shared-secret" %}
+{%             set isis_auth_cli = isis_auth_cli ~ " profile " ~ port_channel_interface.isis_authentication.both.shared_secret.profile %}
+{%             set isis_auth_cli = isis_auth_cli ~ " algorithm " ~ port_channel_interface.isis_authentication.both.shared_secret.algorithm %}
+{%         endif %}
+{%         if port_channel_interface.isis_authentication.both.rx_disabled is arista.avd.defined(true) %}
+{%             set isis_auth_cli = isis_auth_cli ~ " rx-disabled" %}
+{%         endif %}
+   {{ isis_auth_cli }}
+{%     else %}
+{%         if port_channel_interface.isis_authentication.level_1.mode is arista.avd.defined
+               and (port_channel_interface.isis_authentication.level_1.mode in ["md5", "text"]
+               or (port_channel_interface.isis_authentication.level_1.mode == "sha" and port_channel_interface.isis_authentication.level_1.sha.key_id is arista.avd.defined)
+               or (port_channel_interface.isis_authentication.level_1.mode == "shared-secret"
+                   and port_channel_interface.isis_authentication.level_1.shared_secret.profile is arista.avd.defined
+                   and port_channel_interface.isis_authentication.level_1.shared_secret.algorithm is arista.avd.defined)) %}
+{%             set isis_auth_cli = "isis authentication mode " ~ port_channel_interface.isis_authentication.level_1.mode %}
+{%             if port_channel_interface.isis_authentication.level_1.mode == "sha" %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " key-id " ~ port_channel_interface.isis_authentication.level_1.sha.key_id %}
+{%             elif port_channel_interface.isis_authentication.level_1.mode == "shared-secret" %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " profile " ~ port_channel_interface.isis_authentication.level_1.shared_secret.profile %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " algorithm " ~ port_channel_interface.isis_authentication.level_1.shared_secret.algorithm %}
+{%             endif %}
+{%             if port_channel_interface.isis_authentication.level_1.rx_disabled is arista.avd.defined(true) %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " rx-disabled" %}
+{%             endif %}
+   {{ isis_auth_cli }} level-1
+{%         endif %}
+{%         if port_channel_interface.isis_authentication.level_2.mode is arista.avd.defined
+               and (port_channel_interface.isis_authentication.level_2.mode in ["md5", "text"]
+               or (port_channel_interface.isis_authentication.level_2.mode == "sha" and port_channel_interface.isis_authentication.level_2.sha.key_id is arista.avd.defined)
+               or (port_channel_interface.isis_authentication.level_2.mode == "shared-secret"
+                   and port_channel_interface.isis_authentication.level_2.shared_secret.profile is arista.avd.defined
+                   and port_channel_interface.isis_authentication.level_2.shared_secret.algorithm is arista.avd.defined)) %}
+{%             set isis_auth_cli = "isis authentication mode " ~ port_channel_interface.isis_authentication.level_2.mode %}
+{%             if port_channel_interface.isis_authentication.level_2.mode == "sha" %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " key-id " ~ port_channel_interface.isis_authentication.level_2.sha.key_id %}
+{%             elif port_channel_interface.isis_authentication.level_2.mode == "shared-secret" %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " profile " ~ port_channel_interface.isis_authentication.level_2.shared_secret.profile %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " algorithm " ~ port_channel_interface.isis_authentication.level_2.shared_secret.algorithm %}
+{%             endif %}
+{%             if port_channel_interface.isis_authentication.level_2.rx_disabled is arista.avd.defined(true) %}
+{%                 set isis_auth_cli = isis_auth_cli ~ " rx-disabled" %}
+{%             endif %}
+   {{ isis_auth_cli }} level-2
+{%         endif %}
+{%     endif %}
+{%     if port_channel_interface.isis_authentication is arista.avd.defined %}
+{%         set both_key_ids = [] %}
+{%         if port_channel_interface.isis_authentication.both.key_ids is arista.avd.defined %}
+{%             for auth_key in port_channel_interface.isis_authentication.both.key_ids | arista.avd.natural_sort("id") %}
+{%                 if auth_key.id is arista.avd.defined
+                       and auth_key.algorithm is arista.avd.defined
+                       and auth_key.key_type is arista.avd.defined
+                       and auth_key.key is arista.avd.defined %}
+{%                     do both_key_ids.append(auth_key.id) %}
+{%                     if auth_key.rfc_5310 is arista.avd.defined(true) %}
+   isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} rfc-5310 key {{ auth_key.key_type }} {{ auth_key.key }}
+{%                     else %}
+   isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} key {{ auth_key.key_type }} {{ auth_key.key }}
+{%                     endif %}
+{%                 endif %}
+{%             endfor %}
+{%         endif %}
+{%         if port_channel_interface.isis_authentication.level_1.key_ids is arista.avd.defined %}
+{%             for auth_key in port_channel_interface.isis_authentication.level_1.key_ids %}
+{%                 if auth_key.id is arista.avd.defined
+                       and auth_key.id not in both_key_ids
+                       and auth_key.algorithm is arista.avd.defined
+                       and auth_key.key_type is arista.avd.defined
+                       and auth_key.key is arista.avd.defined %}
+{%                     if auth_key.rfc_5310 is arista.avd.defined(true) %}
+   isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} rfc-5310 key {{ auth_key.key_type }} {{ auth_key.key }} level-1
+{%                     else %}
+   isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} key {{ auth_key.key_type }} {{ auth_key.key }} level-1
+{%                     endif %}
+{%                 endif %}
+{%             endfor %}
+{%         endif %}
+{%         if port_channel_interface.isis_authentication.level_2.key_ids is arista.avd.defined %}
+{%             for auth_key in port_channel_interface.isis_authentication.level_2.key_ids %}
+{%                 if auth_key.id is arista.avd.defined
+                       and auth_key.id not in both_key_ids
+                       and auth_key.algorithm is arista.avd.defined
+                       and auth_key.key_type is arista.avd.defined
+                       and auth_key.key is arista.avd.defined %}
+{%                     if auth_key.rfc_5310 is arista.avd.defined(true) %}
+   isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} rfc-5310 key {{ auth_key.key_type }} {{ auth_key.key }} level-2
+{%                     else %}
+   isis authentication key-id {{ auth_key.id }} algorithm {{ auth_key.algorithm }} key {{ auth_key.key_type }} {{ auth_key.key }} level-2
+{%                     endif %}
+{%                 endif %}
+{%             endfor %}
+{%         endif %}
+{%         if port_channel_interface.isis_authentication.both.key_type is arista.avd.defined and port_channel_interface.isis_authentication.both.key is arista.avd.defined %}
+   isis authentication key {{ port_channel_interface.isis_authentication.both.key_type }} {{ port_channel_interface.isis_authentication.both.key }}
+{%         else %}
+{%             if port_channel_interface.isis_authentication.level_1.key_type is arista.avd.defined and port_channel_interface.isis_authentication.level_1.key is arista.avd.defined %}
+   isis authentication key {{ port_channel_interface.isis_authentication.level_1.key_type }} {{ port_channel_interface.isis_authentication.level_1.key }} level-1
+{%             endif %}
+{%             if port_channel_interface.isis_authentication.level_2.key_type is arista.avd.defined and port_channel_interface.isis_authentication.level_2.key is arista.avd.defined %}
+   isis authentication key {{ port_channel_interface.isis_authentication.level_2.key_type }} {{ port_channel_interface.isis_authentication.level_2.key }} level-2
+{%             endif %}
+{%         endif %}
+{%     endif %}
 {%     if port_channel_interface.traffic_policy.input is arista.avd.defined %}
    traffic-policy input {{ port_channel_interface.traffic_policy.input }}
 {%     endif %}
