--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -149,7 +149,7 @@ interface {{ ethernet_interface.name }}
    encapsulation vlan
       {{ encapsulation_cli }}
 {%         endif %}
-{%     elif ethernet_interface.type | arista.avd.default('switched') == 'switched' %}
+{%     elif ethernet_interface.type is arista.avd.defined('switched') %}
    switchport
 {%     endif %}
 {%     if ethernet_interface.trunk_private_vlan_secondary is arista.avd.defined(true) %}
